--- a/cv/phone.css
+++ b/cv/phone.css
@@ -68,7 +68,6 @@
         text-shadow:0px 0px 5px #000;
         display: block;
         text-align: center;
-        z-index: 10000;
 
 }
 /************** MENU **************/
